<package format="3">
  <name>simple_waypoint_follower</name>
  <version>0.0.0</version>
  <description>The simple_waypoint_follower package</description>
  <maintainer email="keitaro487@gmail.com">Keitaro Nakamura</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_util</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
