<package format="3">
  <name>simple_waypoint_follower</name>
  <version>0.0.0</version>
  <description>The simple_waypoint_follower package</description>
  <maintainer email="numerugon487@gmail.com">Keitaro Nakamura</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_util</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>simple_waypoint_follower_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
