<package format="3">
  <name>simple_waypoint_follower_msgs</name>
  <version>0.0.0</version>
  <description>A custom msg for the simple_waypoint_follower package</description>
  <maintainer email="numerugon487@gmail.com">Keitaro Nakamura</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
